<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Internationumber</string>
    <string name="general_image">Image</string>
    <string name="label_next">Next</string>
    <string name="label_finish">Exit</string>
    <string name="label_select_all">Select all</string>
    <string name="label_deselect_all">Deselect all</string>
    <string name="label_contact_info">Contact information</string>
    <string name="label_whoami">Who am I?</string>
    <string name="label_tipsntricks">Tips &amp; Tricks</string>
    <string name="label_faq">FAQ</string>
    <string name="text_info_country_header">Select country for conversion</string>
    <string name="text_info_contacts_header">Select contacts to convert</string>
    <string name="text_info_backup_header">Select a backup to restore</string>
    <string name="text_info_donate_header">I want to donate...</string>
    <string name="info_text_donate">...%s$ to the developer</string>
    <string name="info_text_donate_unable">Unable to connect to Google Play Services. Please try again later or use Paypal instead. :-)</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_backup">Backups</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_donate">Donate</string>
    <string name="msg_ok">OK</string>
    <string name="msg_fail">FAIL</string>
    <string name="msg_no_backups">No backups found.</string>
    <string name="msg_no_contacts">No contacts found that need a country code.</string>
    <string name="msg_no_countries">No countries found.</string>
    <string name="msg_no_projects">No Open Source Projects found.</string>
    <string name="msg_country_not_selected">You need to select a country!</string>
    <string name="msg_contact_not_selected">You need to select at least one contact to proceed.</string>
    <string name="msg_backup_not_selected">You need to select a backup!</string>
    <string name="msg_licensed_as">Licensed as %s</string>
    <string name="msg_restore_ok">Contacts successfully restored.</string>
    <string name="msg_restore_fail">Contacts could not be restored.</string>
    <string name="msg_donation_ok">Thank you for your donation! :-)</string>
    <string name="msg_donation_fail">Donation could not be processed. Please try again!</string>
    <string name="msg_no_donate_options">Trying to contact the Google Play Services...</string>
    <string name="msg_no_questions">No questions found.</string>
    <string name="msg_convert_ok">Contacts successfully converted.</string>
    <string name="msg_convert_fail">Contacts could not be converted.</string>
    <string name="content_faq_q1">What is this?</string>
    <string name="content_faq_q2">Can I select all my contacts at once?</string>
    <string name="content_faq_q3">What if I convert the number to the wrong country?</string>
    <string name="content_faq_q4">I found a problem with the app - what to do?</string>
    <string name="content_faq_q5">I like what you\'ve done - can I throw money at you?</string>
    <string name="content_faq_a1">An awesome app. More precisely, it\'s an app that converts all your non-internationally proofed numbers into numbers you can call from anywhere in the world.</string>
    <string name="content_faq_a2">Short answer - yes. Long answer - yes, either by longpressing a contact in the list and selecting \"Select All\", or by ticking the checkbox above the list itself.</string>
    <string name="content_faq_a3">Nothing at all. You just need to head over to the backup section (via the menu) and restore any contact that you may want to restore.</string>
    <string name="content_faq_a4">The best thing you can do is let me know. If it\'s a crash we\'re talking about, then make sure you send the report that Google asks of you to send. If it\'s something else, don\'t hesitate to get in touch with me. :-)</string>
    <string name="content_faq_a5">Yes! All the money goes straight into the development fund which basically means that I hopefully will be able to do even more things that you can use. However, I might have to bribe my girlfriend with a dinner every once in a while, ha.</string>
    <string name="hint_tips_title">Did you know that...</string>
    <string name="hint_longpress_selection">...you can longpress whenever it\'s possible to select more than one row in a list? If you do that, you\'ll be able to select all rows with only one more tap.\n\nWorth noting is that you achieve the same effect by hitting the checkbox above the lists.</string>
    <string name="hint_many_countries">...it\'s possible to convert a phone number into a bit over 200 different countries? If you travel around a lot and store local numbers on your device, then this app will help you get back in touch when you\'ve crossed the border.</string>
    <string name="hint_request_features">...you can suggest features that should be brought into the app? Just send a bunch of suggestions my way and I\'ll see what I can do!</string>
    <string name="label_getintouch">Get in touch</string>
    <string name="label_email">E-mail</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_googleplus">Google+</string>
    <string name="label_website">Website</string>
    <string name="label_twitter">Twitter</string>
    <string name="label_donate_gplay">Donate via Google Play</string>
    <string name="label_donate_paypal">Donate via Paypal</string>
    <string name="content_author_name">Karl Lindmark</string>
    <string name="content_author_profession">Software Consultant</string>
    <string name="content_author_whereabout">Living in Umeå, Sweden</string>
    <string name="content_author_facebook">ninetwozeroDOTcom</string>
    <string name="content_author_email">support@ninetwozero.com</string>
    <string name="content_author_googleplus">+Karl Lindmark</string>
    <string name="content_author_url">http://ninetwozero.com</string>
    <string name="content_author_twitter">\@karllindmark</string>
    <string name="msg_num_contact_converted">1 contact converted</string>
    <string name="msg_num_contacts_converted">%s contacts converted</string>
    <string name="msg_restore_start">Restoring the selected contacts...</string>
   	<string name="msg_restore_semi_ok" formatted="false">%s out of %s contacts restored.</string>
   	<string name="info_text_current_country">Current country: %s</string>
   	<string name="info_text_no_country">No country selected.</string>
   	<string name="menu_settings">Settings</string>
   	<string name="service_name">Automatic Number Conversion Service</string>
   	<string name="msg_service_started">AutoConvertService has started.</string>
   	<string name="msg_service_stopped">AutoConvertService has been stopped.</string>
   	<string name="msg_service_subtitle">Touch to view more information.</string>
   	<string name="msg_service_title">Converted %s contacts</string>
   	<string name="msg_service_disabled_nocountry">The service has been disabled because you haven\'t selected a country in the settings!</string>
</resources>