<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_restore"
        android:orderInCategory="000"
        android:showAsAction="ifRoom"
        android:title="@string/menu_restore"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="010"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_donate"
        android:orderInCategory="020"
        android:showAsAction="never"
        android:title="@string/menu_donate"/>  
        
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="030"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>   
        
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="040"
        android:showAsAction="never"
        android:title="@string/menu_help"/> 

</menu>