<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            style="@style/Heading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_whoami" />

        <RelativeLayout
            android:id="@+id/wrap_who"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_author_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_role"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_name"
                android:text="@string/content_author_profession" />

            <TextView
                android:id="@+id/text_lives"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_role"
                android:text="@string/content_author_whereabout" />
        </RelativeLayout>

        <TextView
            style="@style/Heading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/label_contact_info" />

        <RelativeLayout
            android:id="@+id/wrap_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/image_email"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/general_image"
                android:src="@drawable/ninetwozero_avatar" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/image_email"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_author_email" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrap_facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/image_facebook"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/general_image"
                android:src="@drawable/ninetwozero_avatar" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/image_facebook"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_facebook"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_author_facebook" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrap_googleplus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/image_gplus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/general_image"
                android:src="@drawable/ninetwozero_gplus" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/image_gplus"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_googleplus"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_author_googleplus" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrap_twitter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/image_twitter"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/general_image"
                android:src="@drawable/ninetwozero_twitter" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/image_twitter"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_twitter"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_author_twitter" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrap_web"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/image_web"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/general_image"
                android:src="@drawable/ninetwozero_web" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/image_web"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_website"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_author_url" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>